--- a/src/app/app-directive/components/cart-checkout/cart-checkout.component.html
+++ b/src/app/app-directive/components/cart-checkout/cart-checkout.component.html
@@ -1,13 +1,13 @@
-<h2>Checkout</h2>
-<h5>You have {{checkoutContent.length}} food {{checkoutContent.length > 1 ? 'items' : 'item'}} in the cart.</h5>
-<table>
+<h2 style="text-align: center">Checkout</h2>
+<h5 style="text-align: center">You have {{checkoutContent.length}} food {{checkoutContent.length > 1 ? 'items' : 'item'}} in the cart.</h5>
+<table class="styled-table">
   <thead>
   <tr>
     <th>#</th>
     <th>Food Item</th>
-    <th>Rate</th>
+    <th>Rate($)</th>
     <th>Quantity</th>
-    <th>Total Price</th>
+    <th>Total Price($)</th>
   </tr>
   </thead>
   <tbody>
@@ -23,32 +23,31 @@
     <td>Total</td>
     <td></td>
     <td></td>
-    <td>{{child.totalPrice}}</td>
+    <td>${{totalPrice}}</td>
   </tr>
   </tbody>
 </table>
+<h4 style="text-align: center">Payment Info</h4>
 
-<div class="page">
-  <div class="container">
-    <div class="left">
-      <div class="login">Enter Payment Info</div>
-    </div>
-    <div class="right">
-      <form [formGroup]="paymentForm" (ngSubmit)="submitPayment$()">
-        <div class="form">
-          <label for="userName">Full Name</label>
-          <input type="text" id="userName" formControlName="name">
-          <label for="contact">Contact</label>
-          <input type="text" id="contact" formControlName="contact">
-          <label for="card">Credit Card Num</label>
-          <input type="text" id="card" formControlName="creditCard">
-          <label for="type">Card Type</label>
-          <input type="text" id="type" formControlName="cardType">
-          <label for="pin">Pin</label>
-          <input type="password" id="pin" formControlName="pin">
-          <input type="submit" id="submit" value="Submit">
-        </div>
-      </form>
-    </div>
-  </div>
+<div class="form-div">
+  <form [formGroup]="paymentForm" (ngSubmit)="submitPayment$()">
+    <label for="userName">Full Name</label>
+    <input type="text" id="userName" formControlName="name" placeholder="Enter full name...">
+
+    <label for="contact">Contact</label>
+    <input type="text" id="contact" formControlName="contact" placeholder="Enter contact num...">
+
+    <label for="card">Credit Card Num</label>
+    <input type="text" id="card" formControlName="creditCard" placeholder="Enter card num...">
+
+    <label for="type">Card Type</label>
+    <input type="text" id="type" formControlName="cardType" placeholder="Enter card type...">
+
+    <label for="pin">Pin</label>
+    <input type="text" id="pin" formControlName="pin" placeholder="Enter pin...">
+
+    <input [disabled]="!paymentForm.valid" type="submit" value="Submit">
+  </form>
 </div>
+
+
