--- a/src/app/app-directive/components/food-detail/food-detail.component.html
+++ b/src/app/app-directive/components/food-detail/food-detail.component.html
@@ -1,9 +1,18 @@
-<h1>{{foodDetail.foodName}}</h1>
-<img [src]="foodDetail.img" alt="Food Item">
-<div>Price: ${{foodDetail.price}}</div>
-<div>Delivery Time: {{foodDetail.deliveryTime}}</div>
-<div>{{foodDetail.detail}}</div>
-<div>
-  <button (click)="cartAdd(foodDetail)">Add to Cart</button>
+<div class="menu" routerLink="/menu">Food menu</div>
+<div class="main">
+  <div class="main-div">
+    <h3 style="text-align: center">{{foodDetail.foodName}}</h3>
+    <img [src]="foodDetail.img" alt="Food Item">
+    <div class="content">
+      <p class="info">Price: ${{foodDetail.price}}</p>
+     <p><button (click)="cartAdd(foodDetail)">Add to Cart</button></p>
+      <p class="info">Delivery Time: {{foodDetail.deliveryTime}} mins</p>
+      <p style="width:-moz-fit-content;word-break: break-all">{{foodDetail.detail}}</p>
+    </div>
+  </div>
+  <div class="sidebar">
+    <app-cart-info></app-cart-info>
+  </div>
 </div>
-<app-cart-info></app-cart-info>
+<footer></footer>
+
