--- a/src/app/app-directive/components/food-menu/food-menu.component.css
+++ b/src/app/app-directive/components/food-menu/food-menu.component.css
@@ -1,30 +1,30 @@
-.container {
-  cursor: pointer;
+.main-box{
   display: flex;
-  height: 320px;
-  margin: 0 auto;
-  width: 640px;
+  flex-wrap: wrap;
+}
+.box {
+  display: flex;
+  flex-wrap: wrap;
+  width: 70%;
+  padding: 10px;
+  margin: 20px;
+  background-color: lightgreen;
 }
 
-@media (max-width: 767px) {
-  .container {
-    flex-direction: column;
-    height: 630px;
-    width: 320px;
-  }
-}
-
-img{
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-  display: block; /* remove extra space below image */
-}
-.box{
+img {
   cursor: pointer;
-  width: 350px;
-  height: 350px;
-  border: 5px solid white;
+  border: 1px solid black;
+  width: 60%;
+  height: 60%;
+}
+
+.data-container {
+  padding: 10px;
+  width: 50%;
+}
+
+p {
+  font-weight: bold;
 }
 
 
