--- a/src/app/app-directive/components/cart-checkout/cart-checkout.component.css
+++ b/src/app/app-directive/components/cart-checkout/cart-checkout.component.css
@@ -48,4 +48,10 @@ input[type=submit]:hover {
   text-align: left;
 }
 
+.box {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
 
