--- a/src/app/app-directive/components/food-detail/food-detail.component.html
+++ b/src/app/app-directive/components/food-detail/food-detail.component.html
@@ -1,4 +1,4 @@
-<div class="menu" routerLink="/menu">Food menu</div>
+<div class="menu" routerLink="/menu">Shop More</div>
 <div class="main">
   <div class="main-div">
     <h3 style="text-align: center">{{foodDetail.foodName}}</h3>
