--- a/src/app/app-directive/components/food-detail/food-detail.component.css
+++ b/src/app/app-directive/components/food-detail/food-detail.component.css
@@ -4,6 +4,7 @@
   width: fit-content;
   background-color: lightgreen;
   border: 1px solid green;
+  font-size: small;
 }
 * {
   box-sizing: border-box;
