--- a/src/app/app-directive/components/login/login.component.css
+++ b/src/app/app-directive/components/login/login.component.css
@@ -2,10 +2,10 @@
   background: #e2e2e5;
   display: flex;
   flex-direction: column;
-  height: calc(100% - 40px);
+  height: 100%;
   position: absolute;
   place-content: center;
-  width: calc(100% - 40px);
+  width: 100%;
 }
 @media (max-width: 767px) {
   .page {
